// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<MessageText /> > should render with a custom inner class when one is set 1`] = `
<div>
  <div
    class="str-chat__message str-chat__message--regular str-chat__message--received str-chat__message--has-text str-chat__message--other"
  >
    <div
      class="str-chat__message-inner"
      data-testid="message-inner"
    >
      <div
        data-testid="mocked-message-actions"
      />
      <div
        class="str-chat__message-bubble"
      >
        <div
          class="str-chat__message-text"
          tabindex="0"
        >
          <div
            class=""
            data-testid="message-text-inner-wrapper"
          >
            <div>
              <p>
                hi mate
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="str-chat__message-reactions-host"
      />
      <div
        class="str-chat__message-error-indicator"
      >
        <div
          class="str-chat__badge str-chat__badge--variant-error str-chat__badge--size-sm"
        >
          <svg
            class="str-chat__icon str-chat__icon--exclamation-mark-fill"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 16.875C10.6904 16.875 11.25 16.3154 11.25 15.625C11.25 14.9346 10.6904 14.375 10 14.375C9.30964 14.375 8.75 14.9346 8.75 15.625C8.75 16.3154 9.30964 16.875 10 16.875Z"
            />
            <path
              d="M9 11.875V3.75C9 3.19772 9.44772 2.75 10 2.75C10.5523 2.75 11 3.19772 11 3.75V11.875C11 12.4273 10.5523 12.875 10 12.875C9.44772 12.875 9 12.4273 9 11.875Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="str-chat__message-metadata"
    />
  </div>
</div>
`;

exports[`<MessageText /> > should render with a custom wrapper class when one is set 1`] = `
<div>
  <div
    class="str-chat__message str-chat__message--regular str-chat__message--received str-chat__message--has-text str-chat__message--other"
  >
    <div
      class="str-chat__message-inner"
      data-testid="message-inner"
    >
      <div
        data-testid="mocked-message-actions"
      />
      <div
        class="str-chat__message-bubble"
      >
        <div
          class="str-chat__message-text"
          tabindex="0"
        >
          <div
            class=""
            data-testid="message-text-inner-wrapper"
          >
            <div>
              <p>
                hello world
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="str-chat__message-reactions-host"
      />
      <div
        class="str-chat__message-error-indicator"
      >
        <div
          class="str-chat__badge str-chat__badge--variant-error str-chat__badge--size-sm"
        >
          <svg
            class="str-chat__icon str-chat__icon--exclamation-mark-fill"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 16.875C10.6904 16.875 11.25 16.3154 11.25 15.625C11.25 14.9346 10.6904 14.375 10 14.375C9.30964 14.375 8.75 14.9346 8.75 15.625C8.75 16.3154 9.30964 16.875 10 16.875Z"
            />
            <path
              d="M9 11.875V3.75C9 3.19772 9.44772 2.75 10 2.75C10.5523 2.75 11 3.19772 11 3.75V11.875C11 12.4273 10.5523 12.875 10 12.875C9.44772 12.875 9 12.4273 9 11.875Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="str-chat__message-metadata"
    />
  </div>
</div>
`;

exports[`<MessageText /> > should render with custom theme identifier in generated css classes when theme is set 1`] = `
<div>
  <div
    class="str-chat__message str-chat__message--regular str-chat__message--received str-chat__message--has-text str-chat__message--other"
  >
    <div
      class="str-chat__message-inner"
      data-testid="message-inner"
    >
      <div
        data-testid="mocked-message-actions"
      />
      <div
        class="str-chat__message-bubble"
      >
        <div
          class="str-chat__message-text"
          tabindex="0"
        >
          <div
            class=""
            data-testid="message-text-inner-wrapper"
          >
            <div>
              <p>
                whatup?!
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="str-chat__message-reactions-host"
      />
      <div
        class="str-chat__message-error-indicator"
      >
        <div
          class="str-chat__badge str-chat__badge--variant-error str-chat__badge--size-sm"
        >
          <svg
            class="str-chat__icon str-chat__icon--exclamation-mark-fill"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 16.875C10.6904 16.875 11.25 16.3154 11.25 15.625C11.25 14.9346 10.6904 14.375 10 14.375C9.30964 14.375 8.75 14.9346 8.75 15.625C8.75 16.3154 9.30964 16.875 10 16.875Z"
            />
            <path
              d="M9 11.875V3.75C9 3.19772 9.44772 2.75 10 2.75C10.5523 2.75 11 3.19772 11 3.75V11.875C11 12.4273 10.5523 12.875 10 12.875C9.44772 12.875 9 12.4273 9 11.875Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="str-chat__message-metadata"
    />
  </div>
</div>
`;
